# sourceCodeQuery

./: .gitignore  README.md  pyproject.toml  test_api.py  test_memory.py  test_query.py  test_simple_query.py  test_sync.py
config/: config.yaml
src/: server.py
src/core/: call_graph.py  code_index.py  code_navigation.py  code_storage.py  gitlab_client.py  memory_service.py  project_manager.py  scheduler.py  understanding_engine.py
src/models/: config.py
src/tools/: memory.py  project.py  query_logic.py  read_file.py  search.py
