[project]
name = "code-query-mcp"
version = "0.1.0"
description = "MCP service for querying source code logic from GitLab repositories with LLM-powered deep understanding"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-gitlab>=4.0.0",
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-languages>=1.10.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
code-query-mcp = "src.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
